# dd_notes

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py
dd_notes/: apps.py  mixins.py
dd_notes/static/dd_notes/: index.js
dd_notes/templates/dd_notes/: note.html
