[metadata]
name = dd_notes
version = 0.2.3
description = Note mixin and template for Django models.
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/dopename/dd_notes
author = Nick Marini
author_email = nick@mindbrain.llc
license = MIT

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    Django >= 3.2
    django_crispy_forms >= 1.12.0